Fixed LxNavBar items overflowing and hiding right outline (!2615)

--- a/src/styles/lx-shell-grid.css
+++ b/src/styles/lx-shell-grid.css
@@ -313,6 +313,7 @@
 
 .lx-layout.lx-layout-default > nav .lx-nav-panel .lx-nav-group {
   width: var(--aside-size);
+  max-width: 100%;
 }
 
 .lx-layout.lx-layout-default > main {
